--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>COVID-19 Employment Solutions</title>
+    <title>Women2Work</title>
   </head>
   <body>
     <div id="root"></div>
